--- a/roles/backend/templates/backend.service.j2
+++ b/roles/backend/templates/backend.service.j2
@@ -3,7 +3,7 @@ Description = Backend Service
 
 [Service]
 User=expense
-Environment=DB_HOST="{{ DB-HOST }}"
+Environment=DB_HOST="db.daws78s.xyz"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
